Fix footer visibility

--- a/assets/superposter/css/style.css
+++ b/assets/superposter/css/style.css
@@ -17,6 +17,8 @@ div#groups {
 
 .footer {
     text-align: center;
+    margin-top: 60px;
+    margin-bottom: 20px;
 }
 
 .btn {
